html tags fixes footer has light color now configuration is legft align like all other items and has a description text on big screens

--- a/media/Next/css/log.css
+++ b/media/Next/css/log.css
@@ -9,7 +9,6 @@ html, body, #content
 }
 .logdiv
 {
-    height: 90%;
     width: 100%;
     overflow: auto;
     border: 2px solid #CCC;
